--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,7 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
-
 {{outlet}}
+
+{{test-component api=api}}
+
+<button {{action 'updateApi'}}>
+  Update API
+</button>
